--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>SuniCoin Blockchain</title>
+    <title>BYDChain Blockchain</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 </head>
 <body class="min-h-screen bg-gray-50 py-10 px-4">
-    <h1 class="text-2xl font-bold mb-6 text-center">SuniCoin Blockchain Explorer</h1>
+    <h1 class="text-2xl font-bold mb-6 text-center">BYDChain Blockchain Explorer</h1>
     <div id="root"></div>
 
     <script type="text/babel">
